--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Azure Functions artifacts
+bin
+obj
+appsettings.json
+local.settings.json
